feat: add about section

--- a/src/index.html
+++ b/src/index.html
@@ -21,20 +21,84 @@
   <link rel="icon" type="image/png" href="assets/favicon/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="assets/favicon/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="assets/favicon/favicon-128.png" sizes="128x128" />
-  <meta name="application-name" content="&nbsp;"/>
+  <meta name="application-name" content="&nbsp;" />
   <meta name="msapplication-TileColor" content="#FFFFFF" />
   <meta name="msapplication-TileImage" content="assets/favicon/mstile-144x144.png" />
   <meta name="msapplication-square70x70logo" content="assets/favicon/mstile-70x70.png" />
   <meta name="msapplication-square150x150logo" content="assets/favicon/mstile-150x150.png" />
   <meta name="msapplication-wide310x150logo" content="assets/favicon/mstile-310x150.png" />
   <meta name="msapplication-square310x310logo" content="assets/favicon/mstile-310x310.png" />
-  
+
 </head>
 
 <body>
   <div class="_wrapper">
 
     <main class="page">
+
+      <section class="page__about about">
+        <div class="about__container _container">
+          <h2 id="about" class="about__title _title"><span class="_highlight">Про</span> школу</h2>
+          <h3 class="about__subtitle"><b>Akademeia High School</b> – частная международная
+            школа-пансион
+            в Варшаве. Школу следует рассматривать как подготовительный этап к высшему образованию. Здесь учится
+            около <span class="_highlight">230 студентов,</span> в том числе <span class="_highlight">10%
+              иностранных.</span>
+          </h3>
+          <ul class="about__list">
+            <li class="about__body">
+              <div class="about__wrapper">
+                <img class="about__image" src="./assets/img/teachers.png" alt="Image teachers" />
+              </div>
+              <div class="about__text">
+                <h4 class="about__heading"><span class="_highlight">Преподаватели</span></h4>
+                <p class="about__paragraph">
+                  Все преподаватели школы – выпускники ведущих университетов мира, в том числе Оксфордского и
+                  Кембриджского университетов, американских университетов списка Лиги плюща и лучших польских вузов.
+                </p>
+                <p class="about__paragraph">
+                  Преподаватели школы имеют степени магистров и докторов наук, участвуют в текущих исследованиях и имеют
+                  многолетний опыт преподавания. Они являются экспертами в своих областях, способными привить студентам
+                  жажду знаний.
+                </p>
+              </div>
+            </li>
+
+            <li class="about__body">
+              <div class="about__text">
+                <h4 class="about__heading"><span class="_highlight">Занятия</span></h4>
+                <p class="about__paragraph">
+                  Все занятия проводятся только на английском языке. Учащиеся занимаются в небольших группах.
+                </p>
+                <p class="about__paragraph">
+                  Классные комнаты украшены инновационными столами Харкнесса (совместный с преподавателем овальный
+                  стол), где учащиеся активно участвуют в групповых дискуссиях со своим учителем. Это ключ к осознанию
+                  школьной философии обучения.
+                </p>
+              </div>
+              <div class="about__wrapper">
+                <img class="about__image" src="./assets/img/lessons.png" alt="Image lessons" />
+              </div>
+            </li>
+
+            <li class="about__body">
+              <div class="about__wrapper">
+                <img class="about__image" src="./assets/img/scholarship.jpg" alt="Image scholarship" />
+              </div>
+              <div class="about__text">
+                <h4 class="about__heading"><span class="_highlight">Стипендия</span></h4>
+                <p class="about__paragraph">
+                  Академия стремится поддерживать исключительно способных студентов, предоставляя им возможность
+                  получить стипендию.
+                </p>
+                <p class="about__paragraph">
+                  <span class="_highlight">Приблизительно 20% студентов школы получают академические или творческие стипендии.</span>
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
 
     </main>
   </div>
