feat: add education section

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
 
             <li class="about__body">
               <div class="about__wrapper">
-                <img class="about__image" src="./assets/img/scholarship.jpg" alt="Image scholarship" />
+                <img class="about__image" src="./assets/img/scholarship.png" alt="Image scholarship" />
               </div>
               <div class="about__text">
                 <h4 class="about__heading"><span class="_highlight">Стипендия</span></h4>
@@ -92,7 +92,8 @@
                   получить стипендию.
                 </p>
                 <p class="about__paragraph">
-                  <span class="_highlight">Приблизительно 20% студентов школы получают академические или творческие стипендии.</span>
+                  <span class="_highlight">Приблизительно 20% студентов школы получают академические или творческие
+                    стипендии.</span>
                 </p>
               </div>
             </li>
@@ -100,6 +101,91 @@
         </div>
       </section>
 
+      <section class="page__education education">
+        <div class="education__container _container">
+          <h2 id="education" class="education__title _title"><span class="_highlight">Другое обучение</span>
+          </h2>
+          <h3 class="education__subtitle">Студенты сужают свой академический диапазон, выбрав одно из шести академических
+            направлений и соответствующие ему предметы (с 2021/22):
+          </h3>
+
+          <ul class="education__programs">
+            <li class="education__program program">
+              <img class="program__image" src="./assets//img/biochemistry.png">
+              <h3 class="program__title">Биохимия</h3>
+              <p class="program__paragraph">биология, химия</p>
+            </li>
+
+            <li class="education__program program">
+              <img class="program__image" src="./assets//img/engineering.png">
+              <h3 class="program__title">Инженерия</h3>
+              <p class="program__paragraph">физика, химия, кодирование</p>
+            </li>
+
+            <li class="education__program program">
+              <img class="program__image" src="./assets//img/social-sciences.png">
+              <h3 class="program__title">Социальные науки</h3>
+              <p class="program__paragraph">психология, экономика, социология </p>
+            </li>
+
+            <li class="education__program program">
+              <img class="program__image" src="./assets//img/humanities.png">
+              <h3 class="program__title">Гуманитарные науки</h3>
+              <p class="program__paragraph">история, религиоведение, философия</p>
+            </li>
+
+            <li class="education__program program">
+              <img class="program__image" src="./assets//img/architecture.png">
+              <h3 class="program__title">Архитектура</h3>
+              <p class="program__paragraph">физика, искусство, история искусства</p>
+            </li>
+
+            <li class="education__program program">
+              <img class="program__image" src="./assets//img/creative-arts.png">
+              <h3 class="program__title">Творческие искусства</h3>
+              <p class="program__paragraph">история, искусство, культура</p>
+            </li>
+          </ul>
+
+          <ul class="education__list">
+            <li class="education__body">
+              <div class="education__wrapper">
+                <img class="education__image" src="./assets/img/events.png" alt="Image events" />
+              </div>
+              <div class="education__text">
+                <h4 class="education__heading"><span class="_highlight">Схема развития личности на iGCSE</span></h4>
+                <h4 class="education__subheading"><span class="_highlight">Включает следующие виды деятельности:</span></h4>
+                <ul class="education__activities">
+                  <li class="education__activitie">разноплановые мастер-классы (самоконтроль, развитие устойчивости,
+                    выступления на аудиторию и академические навыки и др.)</li>
+                  <li class="education__activitie">лекции по управлению проектами вместе с экспертами</li>
+                  <li class="education__activitie">специализированные групповые проекты по выбору учащихся</li>
+                </ul>
+
+              </div>
+            </li>
+
+            <li class="education__body">
+              <div class="education__text">
+                <h4 class="education__heading"><span class="_highlight">Межклассные мероприятия</span></h4>
+                <p class="education__paragraph">
+                  Наконец, студенты могут участвовать во многих разнообразных и межпредметных совместных учебных
+                  программах, таких как факультативное изучение дополнительных предметов, спорт, волонтерство, серии
+                  лекций и т.д.
+                </p>
+                <p class="education__paragraph">
+                  <span class="_highlight">Внеклассная деятельность как важная и неотъемлемая часть нашего общего
+                    учебного плана
+                    обязательна для всех студентов</span>
+                </p>
+              </div>
+              <div class="education__wrapper">
+                <img class="education__image" src="./assets/img/peculiarities.png" alt="Image peculiarities" />
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </div>
   <script src="js/app.min.js">  </script>
