feat: add education section

--- a/src/index.html
+++ b/src/index.html
@@ -103,84 +103,250 @@
 
       <section class="page__education education">
         <div class="education__container _container">
-          <h2 id="education" class="education__title _title"><span class="_highlight">Другое обучение</span>
+          <h2 id="education" class="education__title _title"><span class="_highlight">Программа обучения</span>
           </h2>
-          <h3 class="education__subtitle">Студенты сужают свой академический диапазон, выбрав одно из шести академических
+
+          <ul class="education__filters">
+            <li class="education__filter filter">iGCSE</li>
+            <li class="education__filter">A Levels</li>
+          </ul>
+
+          <div class="education__body">
+            <div class="education__text">
+              <h3 class="education__heading"><span class="_highlight">Международный аттестат о среднем
+                  образовании</span>
+              </h3>
+              <h4 class="education__subheading"> 10 и 11 классы</h4>
+
+              <h4 class="education__paragraph">Процесс оценки длится на протяжении всей программы - первого (10) и
+                второго (11) классов обучения
+              </h4>
+            </div>
+
+            <div class="education__wrapper">
+              <img class="education__image" src="./assets/img/student-1.jpg" alt="Image events" />
+              <img class="education__image" src="./assets/img/student-2.jpg" alt="Image events" />
+            </div>
+          </div>
+
+          <div class="education__descr">
+            <p class="education__paragraph">На данной программе студенты изучают широкий спектр предметов, чтобы
+              познакомиться с различными дисциплинами. Такой подход позволяет исследовать темы и направления, которые
+              они ранее не рассматривали. Все студенты изучают обязательные предметы, которые включают стандарты
+              программы iGCSE, так и выходят за их пределы, чтобы как можно лучше подготовить студентов к дальнейшему
+              обучению.
+            </p>
+
+            <p class="education__paragraph">На данной программе студенты изучают широкий спектр предметов, чтобы
+              познакомиться с различными дисциплинами. Такой подход позволяет исследовать темы и направления, которые
+              они ранее не рассматривали. Все студенты изучают обязательные предметы, которые включают стандарты
+              программы iGCSE, так и выходят за их пределы, чтобы как можно лучше подготовить студентов к дальнейшему
+              обучению.
+            </p>
+          </div>
+
+          <div class="education__subjects subjects">
+            <div class="subjects__accordion accordion">
+              <button class="accordion__show"><img src="assets/img/plus.png" alt=""></button>
+              <h3 class="accordion__heading">Основные предметы 10 класса (2020/21)</h3>
+            </div>
+
+            <ul class="subjects__list">
+              <li class="subjects__item">
+                <img src="assets/svg/math.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Математика</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/english.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Английский язык</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/deutsch.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Немецкий язык</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/music.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Музыка</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/history.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">История</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/geography.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">География</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/biology.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Биология</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/chemistry.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Химия</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/physics.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Физика</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/literature.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Литература</h4>
+              </li>
+            </ul>
+
+            <div class="subjects__accordion accordion">
+              <button class="accordion__show"><img src="assets/img/plus.png" alt=""></button>
+              <h3 class="accordion__heading">Основные предметы 11 класса (2020/21)</h3>
+            </div>
+
+            <ul class="subjects__list">
+              <li class="subjects__item">
+                <img src="assets/svg/math.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Математика</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/english.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Английский язык</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/deutsch.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Немецкий язык</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/music.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Музыка</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/history.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">История</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/geography.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">География</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/biology.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Биология</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/chemistry.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Химия</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/physics.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Физика</h4>
+              </li>
+
+              <li class="subjects__item">
+                <img src="assets/svg/literature.svg" alt="" class="subjects__image">
+                <h4 class="subjects__name">Литература</h4>
+              </li>
+            </ul>
+          </div>
+
+
+          
+        </div>
+      </section>
+
+      <section class="page__approach approach">
+        <div class="approach__container _container">
+          <h2 id="approach" class="approach__title _title"><span class="_highlight">Другой подход</span>
+          </h2>
+          <h3 class="approach__subtitle">Студенты сужают свой академический диапазон, выбрав одно из шести академических
             направлений и соответствующие ему предметы (с 2021/22):
           </h3>
 
-          <ul class="education__programs">
-            <li class="education__program program">
+          <ul class="approach__programs">
+            <li class="approach__program program">
               <img class="program__image" src="./assets//img/biochemistry.png">
               <h3 class="program__title">Биохимия</h3>
               <p class="program__paragraph">биология, химия</p>
             </li>
 
-            <li class="education__program program">
+            <li class="approach__program program">
               <img class="program__image" src="./assets//img/engineering.png">
               <h3 class="program__title">Инженерия</h3>
               <p class="program__paragraph">физика, химия, кодирование</p>
             </li>
 
-            <li class="education__program program">
+            <li class="approach__program program">
               <img class="program__image" src="./assets//img/social-sciences.png">
               <h3 class="program__title">Социальные науки</h3>
               <p class="program__paragraph">психология, экономика, социология </p>
             </li>
 
-            <li class="education__program program">
+            <li class="approach__program program">
               <img class="program__image" src="./assets//img/humanities.png">
               <h3 class="program__title">Гуманитарные науки</h3>
               <p class="program__paragraph">история, религиоведение, философия</p>
             </li>
 
-            <li class="education__program program">
+            <li class="approach__program program">
               <img class="program__image" src="./assets//img/architecture.png">
               <h3 class="program__title">Архитектура</h3>
               <p class="program__paragraph">физика, искусство, история искусства</p>
             </li>
 
-            <li class="education__program program">
+            <li class="approach__program program">
               <img class="program__image" src="./assets//img/creative-arts.png">
               <h3 class="program__title">Творческие искусства</h3>
               <p class="program__paragraph">история, искусство, культура</p>
             </li>
           </ul>
 
-          <ul class="education__list">
-            <li class="education__body">
-              <div class="education__wrapper">
-                <img class="education__image" src="./assets/img/events.png" alt="Image events" />
+          <ul class="approach__list">
+            <li class="approach__body">
+              <div class="approach__wrapper">
+                <img class="approach__image" src="./assets/img/events.png" alt="Image events" />
               </div>
-              <div class="education__text">
-                <h4 class="education__heading"><span class="_highlight">Схема развития личности на iGCSE</span></h4>
-                <h4 class="education__subheading"><span class="_highlight">Включает следующие виды деятельности:</span></h4>
-                <ul class="education__activities">
-                  <li class="education__activitie">разноплановые мастер-классы (самоконтроль, развитие устойчивости,
+              <div class="approach__text">
+                <h4 class="approach__heading"><span class="_highlight">Схема развития личности на iGCSE</span></h4>
+                <h5 class="approach__subheading"><span class="_highlight">Включает следующие виды деятельности:</span>
+                </h5>
+                <ul class="approach__activities">
+                  <li class="approach__activitie">разноплановые мастер-классы (самоконтроль, развитие устойчивости,
                     выступления на аудиторию и академические навыки и др.)</li>
-                  <li class="education__activitie">лекции по управлению проектами вместе с экспертами</li>
-                  <li class="education__activitie">специализированные групповые проекты по выбору учащихся</li>
+                  <li class="approach__activitie">лекции по управлению проектами вместе с экспертами</li>
+                  <li class="approach__activitie">специализированные групповые проекты по выбору учащихся</li>
                 </ul>
 
               </div>
             </li>
 
-            <li class="education__body">
-              <div class="education__text">
-                <h4 class="education__heading"><span class="_highlight">Межклассные мероприятия</span></h4>
-                <p class="education__paragraph">
+            <li class="approach__body">
+              <div class="approach__text">
+                <h4 class="approach__heading"><span class="_highlight">Межклассные мероприятия</span></h4>
+                <p class="approach__paragraph">
                   Наконец, студенты могут участвовать во многих разнообразных и межпредметных совместных учебных
                   программах, таких как факультативное изучение дополнительных предметов, спорт, волонтерство, серии
                   лекций и т.д.
                 </p>
-                <p class="education__paragraph">
+                <p class="approach__paragraph">
                   <span class="_highlight">Внеклассная деятельность как важная и неотъемлемая часть нашего общего
                     учебного плана
                     обязательна для всех студентов</span>
                 </p>
               </div>
-              <div class="education__wrapper">
-                <img class="education__image" src="./assets/img/peculiarities.png" alt="Image peculiarities" />
+              <div class="approach__wrapper">
+                <img class="approach__image" src="./assets/img/peculiarities.png" alt="Image peculiarities" />
               </div>
             </li>
           </ul>
