feat: add action section

--- a/src/index.html
+++ b/src/index.html
@@ -262,7 +262,7 @@
           </div>
 
 
-          
+
         </div>
       </section>
 
@@ -350,6 +350,31 @@
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="page__action action">
+        <div class="action__container _container">
+          <div class="action__body">
+            <div class="action__wrapper">
+              <img class="action__image" src="./assets/img/action.png" alt="Image action" />
+            </div>
+            <div class="action__text">
+              <h4 class="action__heading"><span class="_highlight">20-21 ноября 2021</span> <br>набор на программы: Foundation,
+                iGCSE и A Level</h4>
+
+              <p class="action__paragraph">
+                Academic Potential Assessment проводится всего несколько раз в год. Даты ближайшей оценки на учебный год
+                2022/2023:
+              </p>
+
+              <p class="action__paragraph">
+                Стоимость APA составляет<br> <span class="_highlight"> 95 000 руб. </span>
+              </p>
+
+              <button class="action__button">Запись на apa</button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
