feat: add step section

--- a/src/index.html
+++ b/src/index.html
@@ -353,6 +353,58 @@
         </div>
       </section>
 
+
+      <section class="page__step step">
+        <div class="step__container _container">
+          <div class="step__body">
+            <div class="step__text">
+              <h4 class="step__heading">1-й ШАГ в Академию –<span class="_highlight">APA</span></h4>
+              <p class="step__paragraph">
+                <span class="_highlight">Academic Potential Assessment</span> или оценка академического потенциала —
+                первая и обязательная ступень для
+                поступления в Академию. Цель оценивания – как можно лучше познакомиться с потенциальным студентом и
+                понять его академический потенциал, предпочтения и стремления. Процесс длится два дня и проводится в
+                течение одного уик-энда.
+              </p>
+
+              <h5 class="step__subheading"><span class="_highlight"> Оценка включает:</span></h5>
+              <ul class="step__ratings">
+                <li class="step__rating">Университетские лекции на английском языке, дополняемые тестами для
+                  проверки способности студента изучать и понимать такого рода контент, аналитически мыслить, делать
+                  выводы и сравнивать данные</li>
+                <li class="step__rating">Тестирование на знание английского языка</li>
+                <li class="step__rating">Индивидуальные встречи с преподавателями-предметниками: проверяется не
+                  только знания учащихся, но и гораздо важнее - их потенциал</li>
+                <li class="step__rating">Групповые задачи, в которых мы проверяем навыки адаптации и социальных
+                  способностей</li>
+                <li class="step__rating">Тестирование по математике</li>
+              </ul>
+            </div>
+            <div class="step__wrapper">
+              <img class="step__image" src="./assets/img/step.png" alt="Image step" />
+            </div>
+          </div>
+          <ul class="step__examples">
+            <li class="step__example example">
+              <img src="assets/svg/example.svg" alt="Examaple image" class="example__image">
+              <h6 class="example__title">Пример теста по математике для 8, 9 классов</h6>
+            </li>
+            <li class="step__example example">
+              <img src="assets/svg/example.svg" alt="Examaple image" class="example__image">
+              <h6 class="example__title">Пример теста по математике для 11 класса</h6>
+            </li>
+            <li class="step__example example">
+              <img src="assets/svg/example.svg" alt="Examaple image" class="example__image">
+              <h6 class="example__title">Пример теста по английскому языку для 8, 9 классов</h6>
+            </li>
+            <li class="step__example example">
+              <img src="assets/svg/example.svg" alt="Examaple image" class="example__image">
+              <h6 class="example__title">Пример теста по английскому языку для 11 класса</h6>
+            </li>
+          </ul>
+        </div>
+      </section>
+
       <section class="page__action action">
         <div class="action__container _container">
           <div class="action__body">
@@ -360,7 +412,8 @@
               <img class="action__image" src="./assets/img/action.png" alt="Image action" />
             </div>
             <div class="action__text">
-              <h4 class="action__heading"><span class="_highlight">20-21 ноября 2021</span> <br>набор на программы: Foundation,
+              <h4 class="action__heading"><span class="_highlight">20-21 ноября 2021</span> <br>набор на программы:
+                Foundation,
                 iGCSE и A Level</h4>
 
               <p class="action__paragraph">
