feat: add reviews section

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,33 @@
 
     <main class="page">
 
+      <section class="page__reviews reviews">
+        <div class="reviews__container _container">
+          <img class="reviews__quote" src="assets/img/quote.png">
+          <p class="reviews__paragraph">Akademeia High School – это академическо-селективная англоязычная школа,
+            предлагающая британскую обучающую программу с квалификационными экзаменами на уровнях iGCSE и A Level.</p>
+          <p class="reviews__paragraph">Мы существуем для того, чтобы помочь талантливым школьникам с умениями,
+            способностями и желанием добраться до ТОП англоязычных университетов, в первую очередь в Великобритании, но
+            также и в США и Европе.</p>
+          <img class="reviews__image" src="assets/img/review.png">
+          <h3 class="reviews__name">Марк Мур</h3>
+          <img src="assets/img/ellipse-1.png" alt="" class="reviews__vector">
+          <img src="assets/img/ellipse-2.png" alt="" class="reviews__vector">
+          <img src="assets/img/ellipse-2.png" alt="" class="reviews__vector">
+          <img src="assets/img/ellipse-3.png" alt="" class="reviews__vector">
+          <img src="assets/img/ellipse-3.png" alt="" class="reviews__vector">
+
+          <img src="assets/svg/star-1.svg" alt="" class="reviews__star">
+          <img src="assets/svg/star-2.svg" alt="" class="reviews__star">
+          <img src="assets/svg/star-3.svg" alt="" class="reviews__star">
+          <img src="assets/svg/star-4.svg" alt="" class="reviews__star">
+          <img src="assets/svg/star-5.svg" alt="" class="reviews__star">
+          <img src="assets/svg/star-6.svg" alt="" class="reviews__star">
+          <img src="assets/svg/star-7.svg" alt="" class="reviews__star">
+          <img src="assets/svg/star-8.svg" alt="" class="reviews__star">
+        </div>
+      </section>
+
       <section class="page__about about">
         <div class="about__container _container">
           <h2 id="about" class="about__title _title"><span class="_highlight">Про</span> школу</h2>
