feat: add opinion section

--- a/src/index.html
+++ b/src/index.html
@@ -432,6 +432,32 @@
         </div>
       </section>
 
+      <section class="page__opinion opinion">
+        <div class="opinion__container _container">
+          <h3 class="opinion__heading">Academic Potential Assessment <span class="_highlight">действительно раскрывает
+              глаза</span></h3>
+          <div class="opinion__body">
+            <img class="opinion__quote" src="assets/img/quote.png">
+            <p class="opinion__paragraph">"Как родителям нам кажется, что мы очень хорошо знаем своего ребенка, но, как
+              оказывается, есть много вещей, о которых мы даже не подозреваем. Очень важно узнать как о сильных сторонах
+              вашего ребенка, так и о слабых, над которыми нужно поработать"</p>
+            <h3 class="opinion__name">Родители ученика</h3>
+            <img src="assets/img/ellipse-1.png" alt="" class="opinion__vector">
+            <img src="assets/img/ellipse-2.png" alt="" class="opinion__vector">
+            <img src="assets/img/ellipse-2.png" alt="" class="opinion__vector">
+
+            <img src="assets/svg/star-1.svg" alt="" class="opinion__star">
+            <img src="assets/svg/star-2.svg" alt="" class="opinion__star">
+            <img src="assets/svg/star-3.svg" alt="" class="opinion__star">
+            <img src="assets/svg/star-4.svg" alt="" class="opinion__star">
+            <img src="assets/svg/star-5.svg" alt="" class="opinion__star">
+            <img src="assets/svg/star-6.svg" alt="" class="opinion__star">
+            <img src="assets/svg/star-7.svg" alt="" class="opinion__star">
+            <img src="assets/svg/star-8.svg" alt="" class="opinion__star">
+          </div>
+        </div>
+      </section>
+
       <section class="page__action action">
         <div class="action__container _container">
           <div class="action__body">
