feat: add Stories section

--- a/src/index.html
+++ b/src/index.html
@@ -380,6 +380,65 @@
         </div>
       </section>
 
+      <section class="page__stories stories">
+        <div class="stories__container _container">
+          <h2 class="stories__title"><span class="_highlight">Истории</span> выпускников</h2>
+          <ul class="stories__list">
+            <li class="stories__item story">
+              <h3 class="story__title">Чем вы занимались с момента выпуска из Академии?</h3>
+              <p class="story__paragraph">С момента окончания Академии я изучаю иллюстрацию в Parsons School of Design в
+                Нью-Йорке. Я также работаю над разработкой индивидуальных и совместных проектов, я всегда в поиске новых
+                впечатлений и возможностей для развития себя как художника и личности.</p>
+              <span class="story__num">01.</span>
+              <span class="story__show"><img src="assets/svg/arrow-up.svg" alt="Close arrow image"></span>
+            </li>
+
+            <li class="stories__item story">
+              <h3 class="story__title">Как обучение в Академии помогло вам подготовиться к университету?</h3>
+              <span class="story__num">02.</span>
+              <span class="story__show"><img src="assets/svg/arrow-down.svg" alt="Show arrow image"></span>
+            </li>
+
+            <li class="stories__item story">
+              <h3 class="story__title">Что вам больше всего понравилось в Академии?</h3>
+              <span class="story__num">03.</span>
+              <span class="story__show"><img src="assets/svg/arrow-down.svg" alt="Show arrow image"></span>
+            </li>
+
+            <li class="stories__item story">
+              <h3 class="story__title">Оглядываясь на время обучения в школе, какой совет можно дать нынешним студентам
+                Академии?</h3>
+              <span class="story__num">04.</span>
+              <span class="story__show"><img src="assets/svg/arrow-down.svg" alt="Show arrow image"></span>
+            </li>
+
+            <li class="stories__item story">
+              <h3 class="story__title">Какие ваши проекты на будущее?</h3>
+              <span class="story__num">05.</span>
+              <span class="story__show"><img src="assets/svg/arrow-down.svg" alt="Show arrow image"></span>
+            </li>
+          </ul>
+          <img src="assets/img/image-student-1.png" alt="Image student" class="stories__student student__left-top">
+          <img src="assets/img/image-student-2.png" alt="Image student" class="stories__student student__left-middle">
+          <img src="assets/img/image-student-3.png" alt="Image student" class="stories__student student__left-bottom">
+          <img src="assets/img/image-student-4.png" alt="Image student" class="stories__student student__right-top">
+          <img src="assets/img/image-student-5.png" alt="Image student" class="stories__student student__right-bottom">
+
+          <img src="assets/img/ellipse-2.png" alt="" class="stories__vector vector__bottom_1">
+          <img src="assets/img/ellipse-2.png" alt="" class="stories__vector vector__bottom_2">
+          <img src="assets/img/ellipse-3.png" alt="" class="stories__vector vector__top_1">
+          <img src="assets/img/ellipse-3.png" alt="" class="stories__vector vector__top_2">
+
+          <img src="assets/svg/star-1.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-2.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-3.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-4.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-5.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-6.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-7.svg" alt="" class="stories__star">
+          <img src="assets/svg/star-8.svg" alt="" class="stories__star">
+        </div>
+      </section>
 
       <section class="page__step step">
         <div class="step__container _container">
